--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,6 +56,12 @@ jobs:
       - run: docker-compose exec -T web npm ci
         if: ${{ !steps.cache-npm-ci.outputs.cache-hit }}
 
+      - run: docker-compose exec -T web whoami
+
+      - run: docker-compose exec -T web ls -al /root
+
+      - run: docker-compose exec -T web ls -al /root/.npm
+
       - run: docker-compose exec -T web npm run prod
 
       - uses: aws-actions/amazon-ecr-login@v1
