--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,11 +56,9 @@ jobs:
       - run: docker-compose exec -T web npm ci
         if: ${{ !steps.cache-npm-ci.outputs.cache-hit }}
 
-      - run: docker-compose exec -T web whoami
+      #- run: docker-compose exec -T web npm cache clean --force
 
-      - run: docker-compose exec -T web npm cache clean --force
-
-      - run: docker-compose exec -T web npm run prod
+      - run: docker-compose exec -T web sudo npm run prod
 
       - uses: aws-actions/amazon-ecr-login@v1
         id: amazon-ecr-login
