nginx docker USER node

--- a/infra/docker/nginx/Dockerfile
+++ b/infra/docker/nginx/Dockerfile
@@ -21,3 +21,5 @@ COPY ./infra/docker/nginx/*.conf /etc/nginx/conf.d/
 COPY ./backend/public /work/backend/public
 
 WORKDIR /work/backend
+
+USER node
