--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,7 +62,7 @@ jobs:
 
       #- run: docker-compose exec -T web npm cache clean --force
 
-      - run: docker-compose exec -T web npm run prod
+      - run: docker-compose exec -T web npm cache clean --force & npm run prod
 
       - uses: aws-actions/amazon-ecr-login@v1
         id: amazon-ecr-login
