--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,13 +56,9 @@ jobs:
       - run: docker-compose exec -T web npm ci
         if: ${{ !steps.cache-npm-ci.outputs.cache-hit }}
 
-      - run: docker-compose exec -T web ls -al /usr/local/bin
-
-      - run: docker-compose exec -T web ls -al /usr/local/lib
-
       #- run: docker-compose exec -T web npm cache clean --force
 
-      - run: docker-compose exec -T web npm cache clean --force & npm run prod
+      - run: docker-compose exec -T web npm run prod
 
       - uses: aws-actions/amazon-ecr-login@v1
         id: amazon-ecr-login
