fix ecspresso config file

--- a/ecspresso/config_prod.yaml
+++ b/ecspresso/config_prod.yaml
@@ -4,7 +4,7 @@ service: laravel-fargate-prod-foobar
 service_definition: ecs-service-def.json
 task_definition: ecs-task-def.json
 timeout: "10m0s"
-lugins:
+plugins:
   - name: tfstate
     config:
       url: s3://sample-tfstate-aura/laravel-fargate-app/prod/cicd/foobar=v1.0.0.tfstate
