--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -4,7 +4,7 @@ server {
 
     set_real_ip_from  $VPC_CIDR;
     real_ip_header    X-Forwarded-For;
-    real_ip_recursive on
+    real_ip_recursive on;
 
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
